src/tests/variable-declarations/22.txt
variable-declarations/22.c:4:8: error: expected integer literal as array length for 'a'
 	int a[str] = {1, 2, 3, 4, 5};
 	      ^
